1999-11-18 Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>

	* gcc.c-torture/execute/991118-1.c: New test.

1999-11-16  Geoffrey Keating  <geoffk@cygnus.com>

	* g77.f-torture/execute/u77-test.f (wd): Allow for longer
	working directory pathnames.

1999-11-08  Nick Clifton  <nickc@cygnus.com>

	* lib/gcc-dg.exp: Include target-supports.exp

1999-11-05  Nick Clifton  <nickc@cygnus.com>

	* lib/target-supports.exp: New file: Provide procs to test for 
	features supported by the target.
	(check_weak_available): Moved here from ecos.exp.
	(check_alias_available): New proc: Determine of the target
	toolchain supports the alias attribute.
	
	* gcc.dg/special/ecos.exp: Move check_weak_available to
	target-supports.exp. 
	(alias-1.c): Only perform the test if the target supports
	aliases. 
	(wkali-1.c): Only perform the test if the target supports
	aliases. 

	* gcc.dg/990506-0.c: Expect error messages from cross
	targets as well as native targets.

1999-11-02  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* gcc.dg/ultrasp1.c: Removed xfail.
	* gcc.dg/struct-ret-2.c: Likewise.
	* gcc.dg/array-1.c: Likewise.

1999-11-01  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* gcc.dg/struct-ret-2.c: New test.

	* gcc.dg/array-1.c: New test.

Sat Oct 30 22:23:46 1999  Stephen L Moshier <moshier@mediaone.net>

	* gcc.c-torture/execute/991030-1.c: New test.

Tue Oct 26 20:25:42 1999  Richard Henderson  <rth@cygnus.com>

	* gcc.c-torture/compile/991026-2.c: New test.

Tue Oct 26 00:45:56 1999  Jeffrey A Law  (law@cygnus.com)

	* gcc.c-torture/compile/991026-1.c: New test.

Sat Oct 23 23:36:03 1999  Jeffrey A Law  (law@cygnus.com)

	* gcc.c-torture/execute/991023-1.c: New test.

Tue Oct 19 02:11:29 1999  Jeffrey A Law  (law@cygnus.com)

	* gcc.c-torture/execute/991019-1.c: New test.

Sat Oct 16 00:05:48 1999  Richard Henderson  <rth@cygnus.com>

	* gcc.c-torture/execute/991016-1.c: New test.

Thu Oct 14 04:22:47 1999  Stephane Carrez  <stcarrez@worldnet.fr>
