@@ -1,3 +1,7 @@
+1999-11-19  Nathan Sidwell  <nathan@acm.org>
+
+	* g++.old-deja/g++.ext/restrict1.C: New test.
+
 1999-11-18 Herman A.J. ten Brugge <Haj.Ten.Brugge@net.HCC.nl>
 
 	* gcc.c-torture/execute/991118-1.c: New test.
